--- a/Server/Server.csproj
+++ b/Server/Server.csproj
@@ -60,12 +60,13 @@
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel" />
     <Reference Include="System.Transactions" />
+    <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Framework\NHibernateHelper.cs" />
-    <Compile Include="Managers\UserManager.cs" />
+    <Compile Include="Managers\UserExtensions.cs" />
     <Compile Include="Mapping\BaseMap.cs" />
     <Compile Include="Mapping\CategoryMap.cs" />
     <Compile Include="Mapping\ItemMap.cs" />
