--- a/Server/App.config
+++ b/Server/App.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <startup useLegacyV2RuntimeActivationPolicy="true">
+    <supportedRuntime version="v4.0"/>
+  </startup>
   <appSettings>
     <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true" />
     <add key="ClientSettingsProvider.ServiceUri" value="" />
@@ -21,15 +24,16 @@
   app.config file. System.Configuration does not support config files for libraries. -->
   <system.serviceModel>
     <services>
+
       <service name="Server.Services.UserService">
         <host>
           <baseAddresses>
-            <add baseAddress="http://localhost:8733/Design_Time_Addresses/Server/Service1/" />
+            <add baseAddress="http://localhost:8733/Design_Time_Addresses/RateThisStuff/UserService" />
           </baseAddresses>
         </host>
         <!-- Service Endpoints -->
         <!-- Unless fully qualified, address is relative to base address supplied above -->
-        <endpoint address="" binding="basicHttpBinding" contract="Server.Services.IUserService">
+        <endpoint address="" binding="wsHttpBinding" contract="Server.Contracts.IUserService">
           <!-- 
               Upon deployment, the following identity element should be removed or replaced to reflect the 
               identity under which the deployed service runs.  If removed, WCF will infer an appropriate identity 
@@ -44,6 +48,79 @@
         <!-- This endpoint does not use a secure binding and should be secured or removed before deployment -->
         <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
       </service>
+
+      <service name="Server.Services.ItemService">
+        <host>
+          <baseAddresses>
+            <add baseAddress="http://localhost:8733/Design_Time_Addresses/RateThisStuff/ItemService" />
+          </baseAddresses>
+        </host>
+        <!-- Service Endpoints -->
+        <!-- Unless fully qualified, address is relative to base address supplied above -->
+        <endpoint address="" binding="wsHttpBinding" contract="Server.Contracts.IItemService">
+          <!-- 
+              Upon deployment, the following identity element should be removed or replaced to reflect the 
+              identity under which the deployed service runs.  If removed, WCF will infer an appropriate identity 
+              automatically.
+          -->
+          <identity>
+            <dns value="localhost" />
+          </identity>
+        </endpoint>
+        <!-- Metadata Endpoints -->
+        <!-- The Metadata Exchange endpoint is used by the service to describe itself to clients. -->
+        <!-- This endpoint does not use a secure binding and should be secured or removed before deployment -->
+        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
+      </service>
+
+      <service name="Server.Services.CategoryService">
+        <host>
+          <baseAddresses>
+            <add baseAddress="http://localhost:8733/Design_Time_Addresses/RateThisStuff/CategoryService" />
+          </baseAddresses>
+        </host>
+        <!-- Service Endpoints -->
+        <!-- Unless fully qualified, address is relative to base address supplied above -->
+        <endpoint address="" binding="wsHttpBinding" contract="Server.Contracts.ICategoryService">
+          <!-- 
+              Upon deployment, the following identity element should be removed or replaced to reflect the 
+              identity under which the deployed service runs.  If removed, WCF will infer an appropriate identity 
+              automatically.
+          -->
+          <identity>
+            <dns value="localhost" />
+          </identity>
+        </endpoint>
+        <!-- Metadata Endpoints -->
+        <!-- The Metadata Exchange endpoint is used by the service to describe itself to clients. -->
+        <!-- This endpoint does not use a secure binding and should be secured or removed before deployment -->
+        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
+      </service>
+
+      <service name="Server.Services.RatingService">
+        <host>
+          <baseAddresses>
+            <add baseAddress="http://localhost:8733/Design_Time_Addresses/RateThisStuff/RatingService" />
+          </baseAddresses>
+        </host>
+        <!-- Service Endpoints -->
+        <!-- Unless fully qualified, address is relative to base address supplied above -->
+        <endpoint address="" binding="wsHttpBinding" contract="Server.Contracts.IRatingService">
+          <!-- 
+              Upon deployment, the following identity element should be removed or replaced to reflect the 
+              identity under which the deployed service runs.  If removed, WCF will infer an appropriate identity 
+              automatically.
+          -->
+          <identity>
+            <dns value="localhost" />
+          </identity>
+        </endpoint>
+        <!-- Metadata Endpoints -->
+        <!-- The Metadata Exchange endpoint is used by the service to describe itself to clients. -->
+        <!-- This endpoint does not use a secure binding and should be secured or removed before deployment -->
+        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
+      </service>
+
     </services>
     <behaviors>
       <serviceBehaviors>
