--- a/Client/App.config
+++ b/Client/App.config
@@ -1,6 +1,46 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.1" />
-    </startup>
+  <startup useLegacyV2RuntimeActivationPolicy="true">
+    <supportedRuntime version="v4.0"/>
+  </startup>
+    <system.serviceModel>
+        <bindings>
+            <wsHttpBinding>
+                <binding name="WSHttpBinding_ICategoryService" />
+                <binding name="WSHttpBinding_IItemService" />
+                <binding name="WSHttpBinding_IRatingService" />
+                <binding name="WSHttpBinding_IUserService" />
+            </wsHttpBinding>
+        </bindings>
+        <client>
+            <endpoint address="http://localhost:8733/Design_Time_Addresses/RateThisStuff/CategoryService"
+                binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_ICategoryService"
+                contract="CategoryProxy.ICategoryService" name="WSHttpBinding_ICategoryService">
+                <identity>
+                    <dns value="localhost" />
+                </identity>
+            </endpoint>
+            <endpoint address="http://localhost:8733/Design_Time_Addresses/RateThisStuff/ItemService"
+                binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IItemService"
+                contract="ItemProxy.IItemService" name="WSHttpBinding_IItemService">
+                <identity>
+                    <dns value="localhost" />
+                </identity>
+            </endpoint>
+            <endpoint address="http://localhost:8733/Design_Time_Addresses/RateThisStuff/RatingService"
+                binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IRatingService"
+                contract="RatingProxy.IRatingService" name="WSHttpBinding_IRatingService">
+                <identity>
+                    <dns value="localhost" />
+                </identity>
+            </endpoint>
+            <endpoint address="http://localhost:8733/Design_Time_Addresses/RateThisStuff/UserService"
+                binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IUserService"
+                contract="UserProxy.IUserService" name="WSHttpBinding_IUserService">
+                <identity>
+                    <dns value="localhost" />
+                </identity>
+            </endpoint>
+        </client>
+    </system.serviceModel>
 </configuration>
