--- a/Client/App.config
+++ b/Client/App.config
@@ -6,10 +6,46 @@
     <system.serviceModel>
         <bindings>
             <wsHttpBinding>
-                <binding name="WSHttpBinding_ICategoryService" />
-                <binding name="WSHttpBinding_IItemService" />
-                <binding name="WSHttpBinding_IRatingService" />
-                <binding name="WSHttpBinding_IUserService" />
+                <binding name="WSHttpBinding_ICategoryService" openTimeout="10:00:00"
+                         closeTimeout="10:00:00"
+                         sendTimeout="10:00:00"
+                         receiveTimeout="10:00:00"
+                         maxReceivedMessageSize="2147483647"
+                         maxBufferPoolSize="2147483647"
+                         messageEncoding="Text">
+                  <readerQuotas maxDepth="2147483647" maxStringContentLength="2147483647" maxArrayLength="2147483647"
+                                maxBytesPerRead="2147483647" maxNameTableCharCount="2147483647" />
+                </binding>
+                <binding name="WSHttpBinding_IItemService" openTimeout="10:00:00"
+                         closeTimeout="10:00:00"
+                         sendTimeout="10:00:00"
+                         receiveTimeout="10:00:00"
+                         maxReceivedMessageSize="2147483647"
+                         maxBufferPoolSize="2147483647"
+                         messageEncoding="Text">
+                  <readerQuotas maxDepth="2147483647" maxStringContentLength="2147483647" maxArrayLength="2147483647"
+                                maxBytesPerRead="2147483647" maxNameTableCharCount="2147483647" />
+                </binding>
+                <binding name="WSHttpBinding_IRatingService" openTimeout="10:00:00"
+                         closeTimeout="10:00:00"
+                         sendTimeout="10:00:00"
+                         receiveTimeout="10:00:00"
+                         maxReceivedMessageSize="2147483647"
+                         maxBufferPoolSize="2147483647"
+                         messageEncoding="Text">
+                  <readerQuotas maxDepth="2147483647" maxStringContentLength="2147483647" maxArrayLength="2147483647"
+                                maxBytesPerRead="2147483647" maxNameTableCharCount="2147483647" />
+                </binding>
+                <binding name="WSHttpBinding_IUserService" openTimeout="10:00:00"
+                         closeTimeout="10:00:00"
+                         sendTimeout="10:00:00"
+                         receiveTimeout="10:00:00"
+                         maxReceivedMessageSize="2147483647"
+                         maxBufferPoolSize="2147483647"
+                         messageEncoding="Text">
+                  <readerQuotas maxDepth="2147483647" maxStringContentLength="2147483647" maxArrayLength="2147483647"
+                                maxBytesPerRead="2147483647" maxNameTableCharCount="2147483647" />
+                </binding>
             </wsHttpBinding>
         </bindings>
         <client>
