--- a/Server/App.config
+++ b/Server/App.config
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
+
 <configuration>
   <startup useLegacyV2RuntimeActivationPolicy="true">
-    <supportedRuntime version="v4.0"/>
+    <supportedRuntime version="v4.0" />
   </startup>
   <appSettings>
     <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true" />
@@ -11,17 +12,19 @@
     <compilation debug="true" />
     <membership defaultProvider="ClientAuthenticationMembershipProvider">
       <providers>
-        <add name="ClientAuthenticationMembershipProvider" type="System.Web.ClientServices.Providers.ClientFormsAuthenticationMembershipProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" />
+        <add name="ClientAuthenticationMembershipProvider"
+             type="System.Web.ClientServices.Providers.ClientFormsAuthenticationMembershipProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"
+             serviceUri="" />
       </providers>
     </membership>
     <roleManager defaultProvider="ClientRoleProvider" enabled="true">
       <providers>
-        <add name="ClientRoleProvider" type="System.Web.ClientServices.Providers.ClientRoleProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" cacheTimeout="86400" />
+        <add name="ClientRoleProvider"
+             type="System.Web.ClientServices.Providers.ClientRoleProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"
+             serviceUri="" cacheTimeout="86400" />
       </providers>
     </roleManager>
   </system.web>
-  <!-- When deploying the service library project, the content of the config file must be added to the host's 
-  app.config file. System.Configuration does not support config files for libraries. -->
   <system.serviceModel>
     <services>
 
@@ -31,21 +34,11 @@
             <add baseAddress="http://localhost:8733/Design_Time_Addresses/RateThisStuff/UserService" />
           </baseAddresses>
         </host>
-        <!-- Service Endpoints -->
-        <!-- Unless fully qualified, address is relative to base address supplied above -->
         <endpoint address="" binding="wsHttpBinding" contract="Server.Contracts.IUserService">
-          <!-- 
-              Upon deployment, the following identity element should be removed or replaced to reflect the 
-              identity under which the deployed service runs.  If removed, WCF will infer an appropriate identity 
-              automatically.
-          -->
           <identity>
             <dns value="localhost" />
           </identity>
         </endpoint>
-        <!-- Metadata Endpoints -->
-        <!-- The Metadata Exchange endpoint is used by the service to describe itself to clients. -->
-        <!-- This endpoint does not use a secure binding and should be secured or removed before deployment -->
         <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
       </service>
 
@@ -55,21 +48,11 @@
             <add baseAddress="http://localhost:8733/Design_Time_Addresses/RateThisStuff/ItemService" />
           </baseAddresses>
         </host>
-        <!-- Service Endpoints -->
-        <!-- Unless fully qualified, address is relative to base address supplied above -->
         <endpoint address="" binding="wsHttpBinding" contract="Server.Contracts.IItemService">
-          <!-- 
-              Upon deployment, the following identity element should be removed or replaced to reflect the 
-              identity under which the deployed service runs.  If removed, WCF will infer an appropriate identity 
-              automatically.
-          -->
           <identity>
             <dns value="localhost" />
           </identity>
         </endpoint>
-        <!-- Metadata Endpoints -->
-        <!-- The Metadata Exchange endpoint is used by the service to describe itself to clients. -->
-        <!-- This endpoint does not use a secure binding and should be secured or removed before deployment -->
         <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
       </service>
 
@@ -79,21 +62,11 @@
             <add baseAddress="http://localhost:8733/Design_Time_Addresses/RateThisStuff/CategoryService" />
           </baseAddresses>
         </host>
-        <!-- Service Endpoints -->
-        <!-- Unless fully qualified, address is relative to base address supplied above -->
         <endpoint address="" binding="wsHttpBinding" contract="Server.Contracts.ICategoryService">
-          <!-- 
-              Upon deployment, the following identity element should be removed or replaced to reflect the 
-              identity under which the deployed service runs.  If removed, WCF will infer an appropriate identity 
-              automatically.
-          -->
           <identity>
             <dns value="localhost" />
           </identity>
         </endpoint>
-        <!-- Metadata Endpoints -->
-        <!-- The Metadata Exchange endpoint is used by the service to describe itself to clients. -->
-        <!-- This endpoint does not use a secure binding and should be secured or removed before deployment -->
         <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
       </service>
 
@@ -103,34 +76,35 @@
             <add baseAddress="http://localhost:8733/Design_Time_Addresses/RateThisStuff/RatingService" />
           </baseAddresses>
         </host>
-        <!-- Service Endpoints -->
-        <!-- Unless fully qualified, address is relative to base address supplied above -->
         <endpoint address="" binding="wsHttpBinding" contract="Server.Contracts.IRatingService">
-          <!-- 
-              Upon deployment, the following identity element should be removed or replaced to reflect the 
-              identity under which the deployed service runs.  If removed, WCF will infer an appropriate identity 
-              automatically.
-          -->
           <identity>
             <dns value="localhost" />
           </identity>
         </endpoint>
-        <!-- Metadata Endpoints -->
-        <!-- The Metadata Exchange endpoint is used by the service to describe itself to clients. -->
-        <!-- This endpoint does not use a secure binding and should be secured or removed before deployment -->
         <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
       </service>
 
     </services>
+
+    <bindings>
+      <wsHttpBinding>
+        <binding openTimeout="10:00:00"
+                 closeTimeout="10:00:00"
+                 sendTimeout="10:00:00"
+                 receiveTimeout="10:00:00" 
+                 maxReceivedMessageSize="2147483647" 
+                 maxBufferPoolSize="2147483647"
+                 messageEncoding="Text">
+          <readerQuotas maxDepth="2147483647" maxStringContentLength="2147483647" maxArrayLength="2147483647"
+                        maxBytesPerRead="2147483647" maxNameTableCharCount="2147483647" />
+        </binding>
+      </wsHttpBinding>
+    </bindings>
+
     <behaviors>
       <serviceBehaviors>
         <behavior>
-          <!-- To avoid disclosing metadata information, 
-          set the values below to false before deployment -->
           <serviceMetadata httpGetEnabled="True" httpsGetEnabled="True" />
-          <!-- To receive exception details in faults for debugging purposes, 
-          set the value below to true.  Set to false before deployment 
-          to avoid disclosing exception information -->
           <serviceDebug includeExceptionDetailInFaults="False" />
         </behavior>
       </serviceBehaviors>
