--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -38,6 +38,15 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel" />
+    <Reference Include="System.Windows.Controls.Input.Toolkit, Version=3.5.40128.1, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\WPFToolkit.3.5.50211.1\lib\System.Windows.Controls.Input.Toolkit.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Windows.Controls.Layout.Toolkit, Version=3.5.40128.1, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\WPFToolkit.3.5.50211.1\lib\System.Windows.Controls.Layout.Toolkit.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Windows.Interactivity, Version=4.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Expression.Blend.Sdk.1.0.2\lib\net45\System.Windows.Interactivity.dll</HintPath>
+    </Reference>
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -50,30 +59,15 @@
     <Reference Include="WindowsBase" />
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
+    <Reference Include="WPFToolkit, Version=3.5.40128.1, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\WPFToolkit.3.5.50211.1\lib\WPFToolkit.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="App.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="Controllers\StartPageController.cs" />
-    <Compile Include="Framework\ApplicationData.cs" />
-    <Compile Include="Framework\MainWindowNavigator.cs" />
-    <Compile Include="ViewModels\StartPageViewModel.cs" />
-    <Compile Include="Views\MainWindow.xaml.cs">
-      <DependentUpon>MainWindow.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Views\StartPage.xaml.cs">
-      <DependentUpon>StartPage.xaml</DependentUpon>
-    </Compile>
-    <Page Include="Views\LoginWindow.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Compile Include="App.xaml.cs">
-      <DependentUpon>App.xaml</DependentUpon>
-      <SubType>Code</SubType>
-    </Compile>
     <Compile Include="Connected Services\CategoryProxy\Reference.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -93,6 +87,60 @@
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Reference.svcmap</DependentUpon>
+    </Compile>
+    <Compile Include="Controllers\BestItemsPageController.cs" />
+    <Compile Include="Controllers\FrequentItemsPageController.cs" />
+    <Compile Include="Controllers\ItemsPageController.cs" />
+    <Compile Include="Controllers\StartPageController.cs" />
+    <Compile Include="Controls\Rating.xaml.cs">
+      <DependentUpon>Rating.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Framework\ApplicationData.cs" />
+    <Compile Include="Framework\ControllerBase.cs" />
+    <Compile Include="Framework\MainWindowNavigator.cs" />
+    <Compile Include="Framework\PageControllerBase.cs" />
+    <Compile Include="ViewModels\BestItemsPageViewModel.cs" />
+    <Compile Include="ViewModels\FrequentItemsPageViewModel.cs" />
+    <Compile Include="ViewModels\ItemsPageViewModel.cs" />
+    <Compile Include="ViewModels\StartPageViewModel.cs" />
+    <Compile Include="Views\BestItemsPage.xaml.cs">
+      <DependentUpon>BestItemsPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\FrequentItemsPage.xaml.cs">
+      <DependentUpon>FrequentItemsPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\ItemsPage.xaml.cs">
+      <DependentUpon>ItemsPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\MainWindow.xaml.cs">
+      <DependentUpon>MainWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\StartPage.xaml.cs">
+      <DependentUpon>StartPage.xaml</DependentUpon>
+    </Compile>
+    <Page Include="Controls\Rating.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\BestItemsPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\FrequentItemsPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\ItemsPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\LoginWindow.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Compile Include="App.xaml.cs">
+      <DependentUpon>App.xaml</DependentUpon>
+      <SubType>Code</SubType>
     </Compile>
     <Compile Include="Controllers\LoginWindowController.cs" />
     <Compile Include="Controllers\MainWindowController.cs" />
@@ -132,9 +180,6 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <None Include="Connected Services\CategoryProxy\Client.CategoryProxy.Category.datasource">
-      <DependentUpon>Reference.svcmap</DependentUpon>
-    </None>
     <None Include="Connected Services\CategoryProxy\Models.xsd">
       <SubType>Designer</SubType>
     </None>
@@ -144,9 +189,6 @@
     </None>
     <None Include="Connected Services\CategoryProxy\service1.xsd">
       <SubType>Designer</SubType>
-    </None>
-    <None Include="Connected Services\ItemProxy\Client.ItemProxy.Item.datasource">
-      <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
     <None Include="Connected Services\ItemProxy\Models.xsd">
       <SubType>Designer</SubType>
@@ -158,9 +200,6 @@
     <None Include="Connected Services\ItemProxy\service1.xsd">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Connected Services\RatingProxy\Client.RatingProxy.Rating.datasource">
-      <DependentUpon>Reference.svcmap</DependentUpon>
-    </None>
     <None Include="Connected Services\RatingProxy\Models.xsd">
       <SubType>Designer</SubType>
     </None>
@@ -170,9 +209,6 @@
     </None>
     <None Include="Connected Services\RatingProxy\service1.xsd">
       <SubType>Designer</SubType>
-    </None>
-    <None Include="Connected Services\UserProxy\Client.UserProxy.User.datasource">
-      <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
     <None Include="Connected Services\UserProxy\Models.xsd">
       <SubType>Designer</SubType>
@@ -184,6 +220,12 @@
     <None Include="Connected Services\UserProxy\service1.xsd">
       <SubType>Designer</SubType>
     </None>
+    <None Include="packages.config" />
+    <None Include="Properties\DataSources\Models.Category.datasource" />
+    <None Include="Properties\DataSources\Models.Item.datasource" />
+    <None Include="Properties\DataSources\Models.RatedItem.datasource" />
+    <None Include="Properties\DataSources\Models.Rating.datasource" />
+    <None Include="Properties\DataSources\Models.User.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -194,6 +236,23 @@
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Connected Services\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\Icons\icons8-add-new-96.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\Icons\icons8-cancel-96.png" />
+    <Resource Include="Resources\Icons\icons8-pencil-96.png" />
+    <Resource Include="Resources\Icons\icons8-save-96.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\Icons\icons8-lock-96.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Models\Models.csproj">
+      <Project>{9b83e711-111f-403f-a2ba-fea0614a0ff5}</Project>
+      <Name>Models</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <WCFMetadataStorage Include="Connected Services\CategoryProxy\" />
@@ -249,16 +308,6 @@
       <LastGenOutput>Reference.cs</LastGenOutput>
     </None>
   </ItemGroup>
-  <ItemGroup>
-    <Resource Include="Resources\Icons\icons8-add-new-96.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="Resources\Icons\icons8-cancel-96.png" />
-    <Resource Include="Resources\Icons\icons8-pencil-96.png" />
-    <Resource Include="Resources\Icons\icons8-save-96.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="Resources\Icons\icons8-lock-96.png" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
