--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -34,6 +34,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="BCrypt.Net-Next, Version=2.1.3.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\BCrypt.Net-Next.2.1.3\lib\net47\BCrypt.Net-Next.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Runtime.Serialization" />
@@ -89,9 +92,12 @@
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Compile>
     <Compile Include="Controllers\BestItemsPageController.cs" />
+    <Compile Include="Controllers\CategoryManagementPageController.cs" />
     <Compile Include="Controllers\FrequentItemsPageController.cs" />
     <Compile Include="Controllers\ItemsPageController.cs" />
+    <Compile Include="Controllers\RateWindowController.cs" />
     <Compile Include="Controllers\StartPageController.cs" />
+    <Compile Include="Controllers\UserManagementPageController.cs" />
     <Compile Include="Controls\Rating.xaml.cs">
       <DependentUpon>Rating.xaml</DependentUpon>
     </Compile>
@@ -100,11 +106,17 @@
     <Compile Include="Framework\MainWindowNavigator.cs" />
     <Compile Include="Framework\PageControllerBase.cs" />
     <Compile Include="ViewModels\BestItemsPageViewModel.cs" />
+    <Compile Include="ViewModels\CategoryManagementPageViewModel.cs" />
     <Compile Include="ViewModels\FrequentItemsPageViewModel.cs" />
     <Compile Include="ViewModels\ItemsPageViewModel.cs" />
+    <Compile Include="ViewModels\RateWindowViewModel.cs" />
     <Compile Include="ViewModels\StartPageViewModel.cs" />
+    <Compile Include="ViewModels\UserManagementPageViewModel.cs" />
     <Compile Include="Views\BestItemsPage.xaml.cs">
       <DependentUpon>BestItemsPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\CategoryManagementPage.xaml.cs">
+      <DependentUpon>CategoryManagementPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\FrequentItemsPage.xaml.cs">
       <DependentUpon>FrequentItemsPage.xaml</DependentUpon>
@@ -115,14 +127,24 @@
     <Compile Include="Views\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\RateWindow.xaml.cs">
+      <DependentUpon>RateWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\StartPage.xaml.cs">
       <DependentUpon>StartPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\UserManagementPage.xaml.cs">
+      <DependentUpon>UserManagementPage.xaml</DependentUpon>
     </Compile>
     <Page Include="Controls\Rating.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\BestItemsPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\CategoryManagementPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -157,7 +179,15 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Views\RateWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Views\StartPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\UserManagementPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
