--- a/Client/packages.config
+++ b/Client/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="BCrypt.Net-Next" version="2.1.3" targetFramework="net471" />
   <package id="Expression.Blend.Sdk" version="1.0.2" targetFramework="net471" />
   <package id="WPFToolkit" version="3.5.50211.1" targetFramework="net471" />
 </packages>
