--- a/Client/packages.config
+++ b/Client/packages.config
@@ -2,5 +2,5 @@
 <packages>
   <package id="BCrypt.Net-Next" version="2.1.3" targetFramework="net471" />
   <package id="Expression.Blend.Sdk" version="1.0.2" targetFramework="net471" />
-  <package id="WPFToolkit" version="3.5.50211.1" targetFramework="net471" />
+  <package id="Extended.Wpf.Toolkit" version="3.3.0" targetFramework="net471" />
 </packages>
