--- a/Server/App.config
+++ b/Server/App.config
@@ -26,6 +26,7 @@
     </roleManager>
   </system.web>
   <system.serviceModel>
+    <client />
     <services>
 
       <service name="Server.Services.UserService">
@@ -88,15 +89,11 @@
 
     <bindings>
       <wsHttpBinding>
-        <binding openTimeout="10:00:00"
-                 closeTimeout="10:00:00"
-                 sendTimeout="10:00:00"
-                 receiveTimeout="10:00:00" 
-                 maxReceivedMessageSize="2147483647" 
-                 maxBufferPoolSize="2147483647"
-                 messageEncoding="Text">
-          <readerQuotas maxDepth="2147483647" maxStringContentLength="2147483647" maxArrayLength="2147483647"
-                        maxBytesPerRead="2147483647" maxNameTableCharCount="2147483647" />
+        <binding closeTimeout="10:00:00" openTimeout="10:00:00" receiveTimeout="10:00:00"
+          sendTimeout="10:00:00" maxBufferPoolSize="2147483647" maxReceivedMessageSize="2147483647"
+          messageEncoding="Text">
+          <readerQuotas maxDepth="2147483647" maxStringContentLength="2147483647"
+            maxArrayLength="2147483647" maxBytesPerRead="2147483647" maxNameTableCharCount="2147483647" />
         </binding>
       </wsHttpBinding>
     </bindings>
